# beershop

./: CHALLENGUE.md  Dockerfile  Makefile  Makefile.backend  Makefile.frontend  README.md  docker-compose.yml  mypy.ini  pyproject.toml
assets/: model.d2
backend/: populate.py
backend/api/v1/: routers.py
backend/api/v1/resources/: orders.py
backend/core/: config.py
backend/schemas/: order.py
backend/services/: order.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_order.py  test_stock.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/lib/: data.ts  definitions.ts
frontend/app/orders/: page.tsx
frontend/app/orders/[orderId]/: page.tsx
frontend/app/ui/: fonts.ts
frontend/app/ui/order/: detail.tsx  table.tsx
src/: main.py  populate.py
src/api/v1/resources/: orders.py
src/domain/: order.py  stock.py
src/schemas/: order.py
tests/: conftest.py
tests/unit/: test_order.py
